# sda-excellent-planner

./: .gitignore  README.md  pyproject.toml  template.env
src/: app_storage.py  main.py
src/app/: sda_sheet_fetcher.py
src/lib/: singleton.py  types.py  utils.py
src/services/: base_service.py  google_auth_service.py  google_calendar_service.py  google_sheets_service.py
